<resources>
    <string name="app_name">Autism at Ease</string>
    <string name="uname">User Name</string>
    <string name="pass">Password</string>
    <string name="user_login">login</string>
    <string name="title_activity_main2">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome!</string>
    <string name="nav_header_subtitle" />
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="red_string">RED</string>
    <string name="blue_string">BLUE</string>
    <string name="green_string">GREEN</string>
    <string name="email1">Enter your registered email</string>


    <!-- Registration -->
    <string name="register_banner">Register</string>
    <string name="Rbanner">Tell us about you</string>
    <string name="fname">First Name: </string>
    <string name="lname">Last Name: </string>
    <string name="email">Email: </string>
    <string name="gender">Gender: </string>
    <string name="age">Age: </string>
    <string name="password">Password: </string>
    <string name="hintFname">John</string>
    <string name="hintLname">Smith</string>
    <string name="hintEmail">john.smith@gmail.com</string>
    <string name="register">Register</string>


    <string name="claping_gif">https://media.giphy.com/media/BqVl9yc94lXvq/giphy.gif</string>
</resources>

