<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <ScrollView
        android:id="@+id/RScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/RconstLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/txtHead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/Rbanner"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/txtFName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/fname"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHead"
                app:layout_constraintVertical_bias="0.100000024" />

            <TextView
                android:id="@+id/txtLName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lname"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtFName"
                app:layout_constraintStart_toStartOf="@+id/txtFName"
                app:layout_constraintTop_toBottomOf="@+id/txtFName"
                app:layout_constraintVertical_bias="0.100000024" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtAge"
                app:layout_constraintStart_toStartOf="@+id/txtAge"
                app:layout_constraintTop_toBottomOf="@+id/txtAge"
                app:layout_constraintVertical_bias="0.39" />

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gender"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtLName"
                app:layout_constraintStart_toStartOf="@+id/txtLName"
                app:layout_constraintTop_toBottomOf="@+id/txtLName"
                app:layout_constraintVertical_bias="0.13999999" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/age"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtGender"
                app:layout_constraintStart_toStartOf="@+id/txtGender"
                app:layout_constraintTop_toBottomOf="@+id/txtGender"
                app:layout_constraintVertical_bias="0.13999999" />

            <TextView
                android:id="@+id/txtPass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txtEmail"
                app:layout_constraintStart_toStartOf="@+id/txtEmail"
                app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

            <EditText
                android:id="@+id/fname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/hintFname"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtFName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline" />

            <EditText
                android:id="@+id/lname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintLname"
                android:inputType="textPersonName"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtLName"
                app:layout_constraintEnd_toEndOf="@+id/fname"
                app:layout_constraintStart_toStartOf="@+id/fname" />

            <EditText
                android:id="@+id/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"
                app:layout_constraintEnd_toEndOf="@+id/age"
                app:layout_constraintStart_toStartOf="@+id/age" />

            <Spinner
                android:id="@+id/gender"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtGender"
                app:layout_constraintEnd_toEndOf="@+id/lname"
                app:layout_constraintStart_toStartOf="@+id/lname"
                tools:layout_editor_absoluteY="172dp" />


            <EditText
                android:id="@+id/age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtAge"
                app:layout_constraintEnd_toEndOf="@+id/gender"
                app:layout_constraintStart_toStartOf="@+id/gender" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintBaseline_toBaselineOf="@+id/txtPass"
                app:layout_constraintEnd_toEndOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnRgn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_percent="0.85"
        app:layout_constraintTop_toBottomOf="@+id/RScrollView" />




</android.support.constraint.ConstraintLayout>